[package]
name = "bpsy23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
aes = "0.8.2"
rand = "0.8.5"
lazy_static = "1.4.0"
num-traits = "0.2.17"
clap = { version = "4.4.7", features = ["derive"] }
rand_chacha = "0.3.1"